# cmake-cpp-boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cool-app/: CMakeLists.txt
cool-app/src/: main.cpp
cool-lib/: CMakeLists.txt
cool-lib/include/coolLib/: bar.h
cool-lib/src/: bar.cpp
